BUG FIX: Spacing and overflow errors in name and caption

--- a/client/src/components/Style.css
+++ b/client/src/components/Style.css
@@ -42,9 +42,13 @@ form {
     padding: 2vh;
 }
 
-.middle {
-    vertical-align: middle;
-    margin: 0 2.5%;
+.head {
+    width: 215px;
+    display: flex;
+    height: 35px;
+    margin: 2% 0%;
+    font-size: large;
+    font-family: Jua;
 }
 
 .img {
@@ -53,7 +57,6 @@ form {
     background-size: cover;
     background-repeat: no-repeat;
     margin: 5% auto;
-    vertical-align: middle;
     border-radius: .25rem;
 }
 
@@ -62,11 +65,17 @@ label {
     color: #F4A261;
 }
 
+.middle {
+    vertical-align: middle;
+    margin: 0 2.5%;
+    align-self: center;
+}
+
 .name {
-    height: max-content;
-    margin: 2% 5%;
-    font-size: large;
-    font-family: Jua;
+    width: 130px;  
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .post {
@@ -79,6 +88,7 @@ label {
 }
 
 .scrollable {
+    width: 100%;
     max-height: 25%;
     overflow: auto;
 }
